--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxt/postcss8": "^1.1.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
